# MaxObjects

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
help/: dummy~.maxhelp  pa.clip~.maxhelp  pa.count~.maxhelp  pa.delay1~.maxhelp  pa.delay2~.maxhelp  pa.delay3~.maxhelp  pa.delay4~.maxhelp  pa.delay5~.maxhelp  pa.dummy.maxhelp  pa.gain~.maxhelp  pa.osc1~.maxhelp  pa.osc2~.maxhelp  pa.osc3~.maxhelp  pa.oscbank~.maxhelp  pa.oscpp~.maxhelp  pa.phasorpp~.maxhelp  pa.phasor~.maxhelp  pa.readbuffer1~.maxhelp  pa.readbuffer2~.maxhelp  pa.sah~.maxhelp  pa.snapshot~.maxhelp  pa.starter.maxhelp  pa.starter~.maxhelp
source/projects/dummy_tilde/: CMakeLists.txt  dummy_tilde.cpp
source/projects/pa.clip_tilde/: pa.clip_tilde.cpp
source/projects/pa.count_tilde/: pa.count_tilde.cpp  readme.md
source/projects/pa.delay1_tilde/: pa.delay1_tilde.cpp
source/projects/pa.delay2_tilde/: pa.delay2_tilde.cpp
source/projects/pa.delay3_tilde/: pa.delay3_tilde.cpp
source/projects/pa.delay4_tilde/: pa.delay4_tilde.cpp
source/projects/pa.delay5_tilde/: pa.delay5_tilde.cpp
source/projects/pa.dummy/: pa.dummy.cpp
source/projects/pa.gain_tilde/: pa.gain_tilde.cpp
source/projects/pa.osc1_tilde/: pa.osc1_tilde.cpp
source/projects/pa.osc2_tilde/: pa.osc2_tilde.cpp
source/projects/pa.osc3_tilde/: pa.osc3_tilde.cpp
source/projects/pa.oscbank_tilde/: pa.oscbank_tilde.cpp
source/projects/pa.oscpp_tilde/: pa.oscpp_tilde.cpp
source/projects/pa.phasor_tilde/: pa.phasor_tilde.cpp  readme.md
source/projects/pa.phasorpp_tilde/: pa.phasorpp_tilde.cpp
(+8 files in other folders)
